# cpp-server

./: .gitignore  CMakeLists.txt  README.md
conf/: default.conf  deploy.conf
data/static_data/: sample file.txt  taocp.txt  test.html
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: compressedFileHandler.h  config.h  config_parser.h  echoHandler.h  echoService.h  fileHandler.h  fileService.h  handler.h  healthHandler.h  logger.h  notFoundHandler.h  notfoundHandler.h  notfoundService.h  parser.h  proxyRequestHandler.h  response_generator.h  server.h  service.h  session.h  sessionSSL.h  sessionTCP.h  sleepEchoHandler.h  statusHandler.h
scripts/: init.sh
src/: compressedFileHandler.cc  config.cc  config_parser.cc  echoHandler.cc  echoService.cc  fileHandler.cc  fileService.cc  handler.cc  healthHandler.cc  logger.cc  main.cc  notFoundHandler.cc  notfoundHandler.cc  notfoundService.cc  parser.cc  proxyRequestHandler.cc  requestHandler.cc  response_generator.cc  server.cc  server_main.cc  service.cc  session.cc  sessionSSL.cc  sessionTCP.cc  sleepEchoHandler.cc  statusHandler.cc
tests/: config_test.cc  handler_test.cc  logger_test.cc  parser_test.cc  requestHandler_test.cc  response_generator_test.cc  server_test.cc  services_test.cc  session_test.cc
tests/certs/: README.md  fullchain.pem  fullchain2.pem  privkey.pem  privkey2.pem
tests/config/: echo_multiple_tokens_err  exemplar  find_paths  missing_listen  missing_port  missing_server  multiple_static_paths_err  no_fs_mapping_err  non_numeric_port  port_server_block  port_top_level  too_long_port  unknown_target  wrong_listen_format
tests/handler_tests/: compressedFile_test.cc  echo_test.cc  file_test.cc  handler_test.cc  health_test.cc  hello.txt  notFound_test.cc  proxy_test.cc  sleepEcho_test.cc  status_test.cc
tests/integration/: testDriver.sh
tests/parser/: check_quoted_string  comment_config  empty_block_config  escape_char_config  escape_single_quotes  example_config  extra_closing_braces_config  invalid_config  invalid_double_quote_escape  invalid_escape_config  invalid_single_quote_escape  missing_end_block  missing_opening_braces_config  missing_space_after_doublequotes  missing_space_after_quotes_config  missing_statement_end  multi_comment_config  quotes_config
